instructions.Instructions.scala.error
Compilation error:
Instructions:12: error: too many arguments for method getX: ()Int
getX(1):Int
    ^Instructions:13: error: too many arguments for method getY: ()Int
getY(1):Int
    ^